homework/5.kubernetes-network/deployment-postgre.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-postgre
  namespace: kubepost
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-app-postgre
  template:
    metadata:
      labels:
        app: my-app-postgre
    spec:
      containers:
      - image: postgres:10.13
        name: postgre
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: webdav
