homework/5.kubernetes-network/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redmine
  namespace: kubepost
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-app-redmine
  template:
    metadata:
      labels:
        app: my-app-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
