homework/5.kubernetes-network/service-postgre.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: kubepost
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: my-app-postgre
  type: ClusterIP
